# SketchSolver

./: CMakeLists.txt  LICENSE.txt  README.md  SketchSolver.h  Solver.h
examples/: example.cpp  main.cpp
src/: Config.h  Constraint.h  Function.h  Param.h  Point.h  Segment.h  Solver.h
src/Constraints/: ArcAngleOnArcAngleConstraint.h  ColinearConstraint.h  EllipseTangentConstraint.h  EqualLengthConstraint.h  EqualScalarConstraint.h  ExternalAngleConstraint.h  HorizontalConstraint.h  InternalAngleConstraint.h  LineLengthConstraint.h  LinePerpToAngleConstraint.h  P2LDistanceConstraint.h  P2LDistanceHorzConstraint.h  P2LDistanceVertConstraint.h  P2PDistanceConstraint.h  P2PDistanceHorzConstraint.h  P2PDistanceVertConstraint.h  ParallelConstraint.h  PerpendicularConstraint.h  PointHorizontalDistanceConstraint.h  PointOnArcAngleConstraint.h  PointOnLineConstraint.h  PointOnLineMidpointConstraint.h  PointOnPointConstraint.h  PointVerticalDistanceConstraint.h  VerticalConstraint.h
src/Functions/: ArcAngleOnArcAngleErrorFunction.h  ColinearErrorFunction.h  EllipseTangentErrorFunction.h  EqualLengthErrorFunction.h  EqualScalarErrorFunction.h  ExternalAngleErrorFunction.h  HorizontalErrorFunction.h  InternalAngleErrorFunction.h  LineLengthErrorFunction.h  LinePerpToAngleErrorFunction.h  P2LDistanceErrorFunction.h  P2LDistanceHorzErrorFunction.h  P2LDistanceVertErrorFunction.h  P2PDistanceErrorFunction.h  P2PDistanceHorzErrorFunction.h  P2PDistanceVertErrorFunction.h  ParallelErrorFunction.h  PerpendicularErrorFunction.h  PointHorizontalDistanceErrorFunction.h  (+6 more)
(+5 files in other folders)
